// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Snapshot Testing Plp getInitialProps 1`] = `
Object {
  "gender": "mens",
  "results": undefined,
}
`;

exports[`With Snapshot Testing Plp getInitialProps 2`] = `
Object {
  "gender": "womens",
  "results": undefined,
}
`;

exports[`With Snapshot Testing Plp getInitialProps 3`] = `
Object {
  "gender": "mens",
  "results": undefined,
}
`;

exports[`With Snapshot Testing Plp page shows "mf.swhurl.com" H1 1`] = `
.c5 {
  width: 150px;
  padding: 10px;
  text-align: center;
}

.c2 {
  color: darkgray;
  padding-right: 5px;
}

.c2:hover {
  color: #F00;
}

.c2:visited {
  color: darkgray;
}

.c1 {
  font-weight: bold;
  text-transform: capitalize;
  padding-right: 10px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.c3 {
  text-transform: capitalize;
  margin-bottom: 0px;
}

<div>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      mens
    </div>
    <a
      class="c2"
      href="/mens/shop/accessories"
    >
      Accessories
    </a>
    <a
      class="c2"
      href="/mens/shop/shoes"
    >
      Shoes
    </a>
    <a
      class="c2"
      href="/mens/shop/clothing"
    >
      Clothing
    </a>
    <a
      class="c2"
      href="/mens/shop/bags"
    >
      Bags
    </a>
    <a
      class="c2"
      href="/mens/shop/homeware"
    >
      Homeware
    </a>
  </nav>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      womens
    </div>
    <a
      class="c2"
      href="/womens/shop/accessories"
    >
      Accessories
    </a>
    <a
      class="c2"
      href="/womens/shop/bags"
    >
      Bags
    </a>
    <a
      class="c2"
      href="/womens/shop/clothing"
    >
      Clothing
    </a>
    <a
      class="c2"
      href="/womens/shop/shoes"
    >
      Shoes
    </a>
    <a
      class="c2"
      href="/womens/shop/homeware"
    >
      Homeware
    </a>
  </nav>
  <h1
    class="c3"
  >
    mens
  </h1>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1245717_1_small.jpg"
      />
      Hooded zip-up track jacket
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1263536_1_small.jpg"
      />
      Agile technical ripstop jacket 
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1245726_1_small.jpg"
      />
      Logo-print cotton-blend T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261981_1_small.jpg"
      />
      Accelerate compression stretch leggings
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256827_1_small.jpg"
      />
      Hooded technical jacket
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256819_1_small.jpg"
      />
      Hybrid mesh T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1245719_1_small.jpg"
      />
      Technical track pants
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1247264_1_small.jpg"
      />
      Tech-Preme logo-patch technical sweatshirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256167_1_small.jpg"
      />
      FF-logo zip-through cotton-blend hooded sweatshirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256820_1_small.jpg"
      />
      Logo-patch raglan jersey T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256815_1_small.jpg"
      />
      Belted stretch trousers
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256180_1_small.jpg"
      />
      FF cotton-blend hooded sweatshirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261985_1_small.jpg"
      />
      GHST two-in-one jacket 
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1221480_1_small.jpg"
      />
      Logo-patch crew-neck cotton T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261994_1_small.jpg"
      />
      Urban jersey track pants
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256197_1_small.jpg"
      />
      Run West moth-eaten cotton T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1194379_1_small.jpg"
      />
      Contrast-panel hooded bomber jacket
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256190_1_small.jpg"
      />
      Cult moth-eaten cotton tank top
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1221482_1_small.jpg"
      />
      Striped cotton-blend track pants
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1262681_1_small.jpg"
      />
      Rix hooded jacket
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256166_1_small.jpg"
      />
      Front-stripe logo-printed jersey sweatshirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1245725_1_small.jpg"
      />
      Logo print cotton-blend T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1245720_1_small.jpg"
      />
      Zip-pocket track shorts
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1245727_1_small.jpg"
      />
      Striped cotton-blend jersey T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1263588_1_small.jpg"
      />
      The Redford cotton sweatshirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256157_1_small.jpg"
      />
      Baldwin checked cotton shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1247647_1_small.jpg"
      />
      Seamless compression tights
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256192_1_small.jpg"
      />
      Reverse cotton T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261935_1_small.jpg"
      />
      Marlow technical-twill running jacket
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1263586_1_small.jpg"
      />
      Big Logo-print cotton tank top
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261936_1_small.jpg"
      />
      Windsor II stretch-jersey leggings
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1263540_1_small.jpg"
      />
      Sense Pro crew-neck T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1245722_1_small.jpg"
      />
      Mesh zip-up track top
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1263591_1_small.jpg"
      />
      The Newman cotton T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1245728_1_small.jpg"
      />
      Court-stripe leggings
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1263596_1_small.jpg"
      />
      Big Logo-print cotton tank top
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261987_1_small.jpg"
      />
      GHST contrast-panel performance top
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1263246_1_small.jpg"
      />
      Marion stretch-jersey T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261948_1_small.jpg"
      />
      Royston track pants
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1262688_1_small.jpg"
      />
      Fellows long-sleeved stretch-mesh T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256196_1_small.jpg"
      />
      Quarter-zip technical hooded jacket 
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256816_1_small.jpg"
      />
      Logo-print longline performance T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261980_1_small.jpg"
      />
      Compression running leggings
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1288573_1_small.jpg"
      />
      FF-logo appliqué cotton T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256818_1_small.jpg"
      />
      Mesh-panel performance top
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1247641_1_small.jpg"
      />
      Performance T-shirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1256811_1_small.jpg"
      />
      Climbing belted trousers
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261151_1_small.jpg"
      />
      Guard technical jacket 
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261142_1_small.jpg"
      />
      Constrast-panel performance jacket
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261139_1_small.jpg"
      />
      Guard reflective jacket
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261140_1_small.jpg"
      />
      Revolt technical jacket 
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261149_1_small.jpg"
      />
      Dondi crew-neck technical sweatshirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261148_1_small.jpg"
      />
      Scramble nylon shorts 
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261147_1_small.jpg"
      />
      Crushed technical fabric trousers
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261141_1_small.jpg"
      />
      Utility shell sweatshirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261145_1_small.jpg"
      />
      Dondi technical-shell sweatshirt
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1261143_1_small.jpg"
      />
      Marking reflective jacket
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1263534_1_small.jpg"
      />
      Haloes hybrid hooded down-filled jacket
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1263551_1_small.jpg"
      />
      Agile mesh-panel performance shorts
    </div>
    <div
      class="c5"
    >
      <img
        src="//assetsprx.matchesfashion.com/img/product/1263537_1_small.jpg"
      />
      Agile polka dot-print performance jacket
    </div>
  </div>
</div>
`;
